[metadata]
name = oauth_tools
version = 0.0.1
author_email = natalia.nowakowska@canonical.com
description = A collection of tools useful for testing oauth interface
url = https://github.com/canonical/iam-bundle
classifiers =
    Programming Language :: Python :: 3
license_files = LICENSE

[options]
packages = find:
package_dir =
    =oauth_tools

[options.packages.find]
where = oauth_tools
include = pkg*
